fix image aspect ratio on smaller screens

--- a/index.css
+++ b/index.css
@@ -103,10 +103,8 @@ body {
 }
 
 .card img {
-  /* width: 150px;
-  height: 150px; */
   width: 25%;
-  height: auto;
+  height: 25%;
   border-radius: 3px;
   margin-right: 20px;
 }
